--- a/cho/src/component/Button.css
+++ b/cho/src/component/Button.css
@@ -6,14 +6,21 @@
     padding-bottom: 10px;
     padding-left: 20px;
     padding-right: 20px;
-    font-size: 16px;
+    font-size: 14px;
     white-space: nowrap;
+    cursor: pointer;
 }
 
 .Button_default {
-    width: 500px;
+    width: 100%;
     background-color: black;
     color: white;
+}
+
+.Button_disabled {
+    background-color: #ccc;
+    color: 666;
+    cursor: not-allowed;
 }
 
 .Button_teacher {
