--- a/cho/src/component/Button.css
+++ b/cho/src/component/Button.css
@@ -26,9 +26,21 @@
 .Button_teacher {
     border: 0.5px solid #282828;
     color: black;
+    background-color: white;
+    height: 47.6px;
+    width: 81px;
 }
 
 .Button_student {
     border: 0.5px solid #282828;
     color: black;
+    background-color: white;
+    height: 47.6px;
+    width: 81px;
+}
+
+.Button_selected {
+    background-color: black;
+    color: white;
+    border: none;
 }
