--- a/cho/src/pages/SignUp.css
+++ b/cho/src/pages/SignUp.css
@@ -47,18 +47,19 @@
     margin-top: 10px;
 }
 
-.nameBlock, .roleBlock{
+.nameBlock,
+.roleBlock {
     display: flex;
     flex-direction: column;
-    flex:1;
+    flex: 1;
 }
 
 .roleBlock {
     margin-left: 15px;
 }
 
-.nameInput{
-    flex:1;
+.nameInput {
+    flex: 1;
 }
 
 .roleSelect {
@@ -106,13 +107,15 @@
 }
 
 .errorMessageWrap {
-    margin-top: 8px;
+    height: 16px;
     color: #ef0000;
     font-size: 12px;
+    margin-bottom: 18px;
+    visibility: hidden;
 }
 
-.btn {
-    margin-top: 20px;
+.errorMessageWrap.visible {
+    visibility: visible;
 }
 
 .text_normal {
@@ -123,4 +126,8 @@
 .text_highlight {
     margin-left: 7px;
     cursor: pointer;
+}
+
+.btn {
+    margin-top: 0;
 }
